templates/stakater-tekton-chart_template.yaml
---
# Source: stakater-tekton-chart/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: stakater-tekton-chart
  namespace: default
  labels:
    category: route
    router: default
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-stakater-tekton-chart
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
